--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -11,12 +11,14 @@
                              ngbDropdown
                              role="group">
                             <button class="btn btn-block"
+                                    type="button"
                                     ngbDropdownToggle>
                                 <span i18n>Stichtag</span>: {{stichtag | date:"yyyy"}}
                             </button>
                             <div class="dropdown-menu"
                                  ngbDropdownMenu>
                                 <button *ngFor="let stag of STICHTAGE"
+                                        type="button"
                                         (click)="onStichtagChange(stag)"
                                         ngbDropdownItem>
                                     {{stag | date:"yyyy"}}
@@ -28,12 +30,14 @@
                              ngbDropdown
                              role="group">
                             <button class="btn btn-block"
+                                    type="button"
                                     ngbDropdownToggle>
                                 <span i18n>Teilmarkt</span>: {{teilmarkt.viewValue}}
                             </button>
                             <div class="dropdown-menu"
                                  ngbDropdownMenu>
                                 <button *ngFor="let tm of TEILMAERKTE"
+                                        type="button"
                                         (click)="onTeilmarktChange(tm)"
                                         ngbDropdownItem
                                         class="btn-block">
@@ -51,6 +55,7 @@
                 </div>
                 <div class="nav">
                     <button class="nav-link btn"
+                            type="button"
                             (click)="enableLocationTracking()">
                         <img src="/assets/icons/geo.svg"
                              width="25"
@@ -61,6 +66,7 @@
                              i18n-title>
                     </button>
                     <button class="nav-link btn"
+                            type="button"
                             (click)="toggle3dView()">
                         <img src="/assets/icons/building.svg"
                              width="25"
@@ -71,6 +77,7 @@
                              i18n-title>
                     </button>
                     <button class="nav-link btn"
+                            type="button"
                             (click)="resetMap()">
                         <img src="/assets/icons/globe.svg"
                              width="25"
@@ -91,6 +98,7 @@
             <nav class="nav nav-underline">
                 <div class="nav mr-auto">
                     <button class="nav-link btn"
+                            type="button"
                             (click)="toggleFilterActive()">
                         <img src="/assets/icons/filter.svg"
                              width="25"
@@ -103,6 +111,7 @@
                 </div>
                 <div class="nav ml-auto">
                     <button class="nav-link btn"
+                            type="button"
                             (click)="toggleSearchActive()">
                         <img src="/assets/icons/search.svg"
                              width="25"
@@ -113,6 +122,7 @@
                              i18n-title>
                     </button>
                     <button class="nav-link btn"
+                            type="button"
                             (click)="enableLocationTracking()">
                         <img src="/assets/icons/geo.svg"
                              width="25"
@@ -123,6 +133,7 @@
                              i18n-title>
                     </button>
                     <button class="nav-link btn"
+                            type="button"
                             (click)="toggle3dView()">
                         <img src="/assets/icons/building.svg"
                              width="25"
@@ -133,6 +144,7 @@
                              i18n-title>
                     </button>
                     <button class="nav-link btn"
+                            type="button"
                             (click)="resetMap()">
                         <img src="/assets/icons/globe.svg"
                              width="25"
@@ -160,12 +172,14 @@
                  role="group"
                  aria-label="Button group with nested dropdown">
                 <button class="btn btn-block"
+                        type="button"
                         ngbDropdownToggle>
                     <span i18n>Stichtag</span>: {{stichtag}}
                 </button>
                 <div class="dropdown-menu"
                      ngbDropdownMenu>
                     <button *ngFor="let stag of STICHTAGE"
+                            type="button"
                             (click)="onStichtagChange(stag)"
                             ngbDropdownItem>
                         {{stag}}
@@ -178,12 +192,14 @@
                  role="group"
                  aria-label="Button group with nested dropdown">
                 <button class="btn btn-block"
+                        type="button"
                         ngbDropdownToggle>
                     <span i18n>Teilmarkt</span>: {{teilmarkt.viewValue}}
                 </button>
                 <div class="dropdown-menu"
                      ngbDropdownMenu>
                     <button *ngFor="let tm of TEILMAERKTE"
+                            type="button"
                             (click)="onTeilmarktChange(tm)"
                             ngbDropdownItem
                             class="btn-block">
