--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -3,7 +3,7 @@
               type="text"
               class="form-control"
               placement="bottom"
-              placeholder="Bitte Ort eingeben large..."
+              placeholder="Bitte Ort eingeben..."
               i18n-placeholder
               aria-label="Ort"
               i18n-aria-label
@@ -17,7 +17,7 @@
               type="text"
               class="form-control"
               placement="bottom-left"
-              placeholder="Bitte Ort eingeben small..."
+              placeholder="Bitte Ort eingeben..."
               i18n-placeholder
               aria-label="Ort"
               i18n-aria-label
