--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -5,7 +5,7 @@
      aria-rowcount="4">
     <div class="card-header">
         <caption class="sr-only"
-                 i18n>Tabelle Bodenrichtwertzone</caption>
+                 i18n>Tabelle Bodenrichtwertzone {{ feature.properties.nutzung | nutzung }}</caption>
         <div class="row">
             <h5 class="col-md-5 mb-0"
                 role="rowheader"><b>{{brzStrings.brz | hyphenate}}</b></h5>
