--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -5,6 +5,32 @@
             jeweiligen
             Jahres ermittelt werden. Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
 
+        <!-- eChart in table-form for accessibility -->
+        <table class="table table-responsive sr-only">
+            <caption i18n>Zeitliche Entwicklung Bodenrichtwerte</caption>
+            <thead>
+                <tr>
+                    <th role="columnheader"
+                        i18n> Nutzungsart </th>
+                    <th role="columnheader">{{ seriesTemplate[0].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[1].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[2].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[3].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[4].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[5].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[6].stag }}</th>
+                    <th role="columnheader">{{ seriesTemplate[7].stag }}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let t of srTableData; let i=index">
+                    <th role="rowheader">{{ srTableHeader[i] }}</th>
+                    <td *ngFor="let serie of t.series"
+                        role="cell">{{ serie.brw }}</td>
+                </tr>
+            </tbody>
+        </table>
+
         <div echarts
              (chartInit)="onChartInit($event)"
              [options]="chartOption"
@@ -13,11 +39,10 @@
     </ng-container>
 
     <ng-container *ngIf="!echartsInstance">
-        <div 
-            id="eChartInstance"
-            echarts
-            (chartInit)="onChartInit($event)"
-            [options]="chartOption"></div>
+        <div id="eChartInstance"
+             echarts
+             (chartInit)="onChartInit($event)"
+             [options]="chartOption"></div>
     </ng-container>
 
     <div>
