improved flurstücksauswahl presentation for mobile

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -182,7 +182,7 @@
                 </mgl-map>
             </div>
         </div>
-        <div [class]="isCollapsed ? 'col-12' : 'col-lg-6'">
+        <div [class]="isCollapsed ? 'col-12' : 'col-lg-6 height-lg'">
             <div class="row">
                 <div *ngIf="flurstueckSelection.size === 0"
                      class="text-center border-top col-12 p-0">
