--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -11,22 +11,31 @@
             <thead>
                 <tr>
                     <th role="columnheader"
+                        scope="col"
                         i18n> Nutzungsart </th>
-                    <th role="columnheader">{{ seriesTemplate[0].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[1].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[2].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[3].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[4].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[5].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[6].stag }}</th>
-                    <th role="columnheader">{{ seriesTemplate[7].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[0].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[1].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[2].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[3].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[4].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[5].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[6].stag }}</th>
+                    <th role="columnheader"
+                        scope="col">{{ seriesTemplate[7].stag }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let t of srTableData; let i=index">
-                    <th role="rowheader">{{ srTableHeader[i] }}</th>
-                    <td *ngFor="let serie of t.series"
-                        role="cell">{{ serie.brw }}</td>
+                    <th role="rowheader"
+                        scope="row">{{ srTableHeader[i] }}</th>
+                    <td *ngFor="let serie of t.series">{{ serie.brw }}</td>
                 </tr>
             </tbody>
         </table>
