Improved icon aligment

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -96,7 +96,7 @@
                         <svg width="1.5em"
                              height="1.5em"
                              viewBox="0 0 16 16"
-                             class="bi bi-file-person align-top"
+                             class="bi bi-file-person"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
                              focusable="false"
