--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -68,7 +68,7 @@
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
-                 class="bi bi-file-earmark-medical align-baseline"
+                 class="bi bi-file-earmark-medical"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
                  focusable="false"
