--- a/power/src/app/fragebogen/editor/answers/answers.component.html
+++ b/power/src/app/fragebogen/editor/answers/answers.component.html
@@ -46,7 +46,7 @@
                     <svg width="1em"
                          height="1em"
                          viewBox="0 0 16 16"
-                         class="bi bi-caret-up align-baseline"
+                         class="bi bi-caret-up"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
                          focusable="false"
@@ -67,7 +67,7 @@
                     <svg width="1em"
                          height="1em"
                          viewBox="0 0 16 16"
-                         class="bi bi-caret-down align-baseline"
+                         class="bi bi-caret-down"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
                          focusable="false"
@@ -90,7 +90,7 @@
                     <svg width="1em"
                          height="1em"
                          viewBox="0 0 16 16"
-                         class="bi bi-trash-fill align-baseline"
+                         class="bi bi-trash-fill"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
                          focusable="false"
@@ -131,7 +131,7 @@
                         <svg width="1em"
                              height="1em"
                              viewBox="0 0 16 16"
-                             class="bi bi-trash-fill align-baseline"
+                             class="bi bi-trash-fill"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
                              focusable="false"
@@ -154,7 +154,7 @@
                     <svg width="1em"
                          height="1em"
                          viewBox="0 0 16 16"
-                         class="bi bi-cloud-arrow-up align-baseline"
+                         class="bi bi-cloud-arrow-up"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
                          focusable="false"
@@ -184,10 +184,10 @@
         i18n-title
         title="Antwortmöglichkeit hinzufügen"
         (click)="addAnswer()">
-    <svg width="1em"
-         height="1em"
+    <svg width="1.2em"
+         height="1.2em"
          viewBox="0 0 16 16"
-         class="bi bi-plus align-baseline"
+         class="bi bi-plus"
          fill="currentColor"
          xmlns="http://www.w3.org/2000/svg"
          focusable="false"
