--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -156,10 +156,10 @@
             i18n-title
             title="Bedingung entfernen"
             (click)="ConditionDel()">
-        <svg width="1em"
-             height="1em"
+        <svg width="1.2em"
+             height="1.2em"
              viewBox="0 0 16 16"
-             class="bi bi-dash align-baseline"
+             class="bi bi-dash"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
@@ -175,10 +175,10 @@
             i18n-title
             title="Bedingung hinzufügen"
             (click)="ConditionAdd()">
-        <svg width="1em"
-             height="1em"
+        <svg width="1.2em"
+             height="1.2em"
              viewBox="0 0 16 16"
-             class="bi bi-plus align-baseline"
+             class="bi bi-plus"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
