--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -8,7 +8,7 @@
         <svg width="1em"
              height="1em"
              viewBox="0 0 16 16"
-             class="bi bi-file-earmark-medical align-baseline"
+             class="bi bi-file-earmark-medical"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
@@ -29,7 +29,7 @@
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
-                 class="bi bi-backspace align-baseline"
+                 class="bi bi-backspace"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
                  focusable="false"
@@ -97,7 +97,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-pencil-square align-baseline"
+                     class="bi bi-pencil-square"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -118,7 +118,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-arrows-fullscreen align-baseline"
+                     class="bi bi-arrows-fullscreen"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -142,8 +142,8 @@
                     i18n-title
                     title="Formular exportieren"
                     (click)="exportForm()">
-                <svg width="1.5em"
-                     height="1.5em"
+                <svg width="1em"
+                     height="1em"
                      viewBox="0 0 16 16"
                      class="bi bi-cloud-arrow-down"
                      fill="currentColor"
@@ -189,7 +189,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-globe2 align-baseline"
+                     class="bi bi-globe2"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -209,7 +209,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-archive-fill align-baseline"
+                     class="bi bi-archive-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -229,7 +229,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-trash-fill align-baseline"
+                     class="bi bi-trash-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -431,7 +431,7 @@
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
-                                     class="bi bi-binoculars-fill align-baseline"
+                                     class="bi bi-binoculars-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
                                      focusable="false"
@@ -451,7 +451,7 @@
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
-                                     class="bi bi-trash-fill align-baseline"
+                                     class="bi bi-trash-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
                                      focusable="false"
@@ -478,10 +478,10 @@
                     title="Neue PIN erstellen"
                     (click)="maketask.open()"
                     *ngIf="data.form.status === 'published' && data.form.access !== 'public' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
-                <svg width="1.5em"
-                     height="1.5em"
+                <svg width="1em"
+                     height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-plus align-top"
+                     class="bi bi-plus"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -500,10 +500,10 @@
                     i18n-title
                     title="Ergebnisse als CSV herunterladen"
                     (click)="getCSV()">
-                <svg width="1.5em"
-                     height="1.5em"
+                <svg width="1em"
+                     height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-cloud-arrow-down align-top"
+                     class="bi bi-cloud-arrow-down"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
@@ -518,9 +518,9 @@
             </button>
 
             <!-- Tasks Pagination -->
-            <div class="float-right">
-                <div class="form-inline well">
-                    <div class="form-group mx-2">
+            <div class="float-lg-right mt-2 mt-lg-0">
+                <div class="form-inline">
+                    <div class="form-group m-0 mr-2">
                         <select class="custom-select"
                                 (change)="data.tasksPerPage = $event.target.value; updateTasks(false)">
                             <option *ngFor=" let size of data.taskPageSizes ">
