--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -49,7 +49,7 @@
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
-                 class="bi bi-globe2 align-baseline"
+                 class="bi bi-globe2"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
                  focusable="false"
