--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -35,7 +35,7 @@
         <svg width="1em"
              height="1em"
              viewBox="0 0 16 16"
-             class="bi bi-hdd align-baseline"
+             class="bi bi-hdd"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
