--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -354,7 +354,7 @@
                                     <svg width="1em"
                                          height="1em"
                                          viewBox="0 0 16 16"
-                                         class="bi bi-caret-up align-baseline"
+                                         class="bi bi-caret-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
@@ -375,7 +375,7 @@
                                     <svg width="1em"
                                          height="1em"
                                          viewBox="0 0 16 16"
-                                         class="bi bi-caret-down align-baseline"
+                                         class="bi bi-caret-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
@@ -578,7 +578,7 @@
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
-                 class="bi bi-hdd align-baseline"
+                 class="bi bi-hdd"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
                  focusable="false"
