--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -230,10 +230,10 @@
             i18n-title
             title="Validator entfernen"
             (click)="ValidatorDel()">
-        <svg width="1em"
-             height="1em"
+        <svg width="1.2em"
+             height="1.2em"
              viewBox="0 0 16 16"
-             class="bi bi-dash align-baseline"
+             class="bi bi-dash"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
@@ -249,10 +249,10 @@
             i18n-title
             title="Validator hinzufügen"
             (click)="ValidatorAdd()">
-        <svg width="1em"
-             height="1em"
+        <svg width="1.2em"
+             height="1.2em"
              viewBox="0 0 16 16"
-             class="bi bi-plus align-baseline"
+             class="bi bi-plus"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
              focusable="false"
