--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -5,8 +5,8 @@
         <section class="col-12 col-lg-6">
             <div class="jumbotron">
                 <h1 class="display-4">
-                    <svg width="0.8em"
-                         height="0.8em"
+                    <svg width="1em"
+                         height="1em"
                          viewBox="0 0 16 16"
                          class="bi bi-file-earmark-medical align-baseline"
                          fill="currentColor"
@@ -51,10 +51,10 @@
                                 title="PIN absenden"
                                 aria-label="PIN absenden"
                                 i18n-aria-label>
-                            <svg width="1.5em"
-                                 height="1.5em"
+                            <svg width="1.2em"
+                                 height="1.2em"
                                  viewBox="0 0 16 16"
-                                 class="bi bi-play-fill align-top"
+                                 class="bi bi-play-fill"
                                  fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg"
                                  focusable="false"
@@ -71,8 +71,8 @@
         <section class="col-12 col-lg-6">
             <div class="jumbotron">
                 <h1 class="display-4">
-                    <svg width="0.8em"
-                         height="0.8em"
+                    <svg width="1em"
+                         height="1em"
                          viewBox="0 0 16 16"
                          class="bi bi-search align-baseline"
                          fill="currentColor"
@@ -99,7 +99,7 @@
                         <svg width="1em"
                              height="1em"
                              viewBox="0 0 16 16"
-                             class="bi bi-box-arrow-right align-baseline"
+                             class="bi bi-box-arrow-right"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
                              focusable="false"
@@ -184,7 +184,7 @@
                         <svg width="1em"
                              height="1em"
                              viewBox="0 0 16 16"
-                             class="bi bi-box-arrow-right align-baseline"
+                             class="bi bi-box-arrow-right"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
                              focusable="false"
