--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -55,7 +55,7 @@
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
-                     class="bi bi-clipboard align-baseline"
+                     class="bi bi-clipboard"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
                      focusable="false"
