--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -47,3 +47,27 @@ a:not([href]):hover {
     color: inherit;
     text-decoration: none;
 }
+
+.bi {
+    vertical-align: -0.1em;
+    margin-bottom: calc(-0.125em / 2);
+}
+
+// Make icons slightly larger (aesthetically) in input group prepend/append
+.input-group {
+    .input-group-text {
+        .bi {
+            transform: scale(1.1);
+        }
+    }
+}
+
+// Make icons slightly larger (aesthetically) in buttons and dropdowns
+.btn,
+.dropdown {
+    .bi {
+        transform: scale(1.1);
+        // reset the bottom margin from above
+        margin-bottom: 0;
+    }
+}
