--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -60,8 +60,8 @@
                         <img src="/assets/icons/geo.svg"
                              width="25"
                              height="25"
-                             alt="Ortung"
-                             title="Ortung"
+                             alt="Eigenen Standort anzeigen"
+                             title="Eigenen Standort anzeigen"
                              i18n-alt
                              i18n-title>
                     </button>
@@ -84,6 +84,7 @@
                              height="25"
                              alt="Karte zurücksetzen"
                              title="Karte zurücksetzen"
+                             aria-label="Karte und Adresseingabe zurücksetzen"
                              i18n-alt
                              i18n-title>
                     </button>
