--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -4,8 +4,9 @@
               placement="bottom"
               placeholder="Bitte Ort eingeben..."
               i18n-placeholder
-              aria-label="Ort"
-              i18n-aria-label
+              aria-label="Suche"
+              aria-placeholder="Bitte geben Sie eine Adresse ein."
+              i18n-aria-placeholder
               [(ngModel)]="model"
               [ngbTypeahead]="search"
               [inputFormatter]="inputFormatter"
