--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -11,7 +11,7 @@
             </svg>
             <span class="ml-1" aria-hidden="true" i18n>Formulare</span>
             <div class="float-right">
-                <input class="form-control" id="form-title-search" type="text" role="search" placeholder="Titel" aria-description="Suchen Sie hier nach einem Formular-Titel." i18n-placeholder i18n-aria-description (change)="title = $event.target.value; update(false)">
+                <input class="form-control" id="form-title-search" type="text" role="search" placeholder="Suche" aria-description="Suchen Sie hier nach einem Formular." i18n-placeholder i18n-aria-description (change)="search = $event.target.value; update(false)">
             </div>
         </div>
         <div class="card-body table-responsive p-0">
