--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -494,6 +494,7 @@
                                 (change)="formPerPage = $event.target.value; updateForms(false)">
                             <option *ngFor=" let size of formPageSizes">
                                 {{ size }}
+                            </option>
                         </select>
                     </div>
                     <pagination #formPagination [boundaryLinks]="true" [itemsPerPage]="formPerPage" [maxSize]="10" page="formPage" [totalItems]="formTotal" (pageChanged)="formPage = $event.page; updateForms(false)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
